--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "styled-components": "^4.1.3",
     "uniqid": "^5.0.3"
   },
+  "engines" : {
+    "npm": "10.16.0",
+    "npm": "6.9.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
